[MOBILE] Prevent scrolling annoying on mobile on <Screen> page layout (i.e. the main map)

--- a/client/layouts/pages/pages.css
+++ b/client/layouts/pages/pages.css
@@ -32,6 +32,11 @@
 }
 
 .Screen {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     overflow: hidden;
